Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10631

Qt Quick 2.0 component creation time not shown in profiler

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 3.1.0-beta
    • Qt Creator 2.8.1, Qt Creator 3.0.0-beta
    • QML Profiler
    • None
    • e0a0b81427f311464a9dbfcd7bf297229a6100e1 32d36bf38c34553a50035bc324c1b8e2d9f5be5b dd1bd3b01b506a05b475514fb2ba7e387f7b17fa 927c39c8db6b5feeea5a60b1eab2bbb07eb4bbe7 in qtdeclarative

    Description

      The following code shows only a single, top-level component creation in the profiler at startup, and no component creation when scrolling:

      import QtQuick 2.0
      
      Item {
          width: 400; height: 400
      
          ListView {
              anchors.fill: parent
              model:  20
              delegate: Item {
                  width: parent.width; height: 50
                  Text {
                      anchors.verticalCenter: parent.verticalCenter
                      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis purus eros, pulvinar id metus a, aliquam porttitor nisi. Quisque ut mi ac dui scelerisque hendrerit nec eget turpis. Morbi purus metus, pulvinar pellentesque volutpat eu, lobortis sit amet massa. Duis tempor metus nisl, sit amet rhoncus leo lacinia at. Nullam at augue quis orci consectetur auctor ut et turpis. Aenean convallis arcu faucibus, rhoncus nisi eget, adipiscing lectus. Vestibulum dignissim est at leo eleifend lacinia a eget nisl. Proin luctus dui ornare ornare aliquam. Mauris a dolor pulvinar, tincidunt diam eu, hendrerit nisl. In hac habitasse platea dictumst. Morbi eget odio quis nibh suscipit accumsan at id dolor. Praesent auctor mauris urna, in pulvinar neque vestibulum lacinia. Donec ac massa quam. Vestibulum sit amet libero bibendum, auctor velit nec, euismod dolor. Morbi tincidunt tempor mi, id vestibulum dolor. Nulla id dolor pharetra, ornare eros varius, varius augue. Nullam ornare odio id leo elementum, laoreet gravida mi gravida. Nulla sodales sem sed magna laoreet, at laoreet massa viverra. Ut eget pulvinar nisi. Nam laoreet elementum sodales. Mauris ac neque auctor, sagittis sem quis, fermentum leo."
                  }
              }
          }
      }
      

      In QtQuick 1.1 it shows the creation of each delegate separately, both at startup and when scrolling.

      The following also fails to display a component creation event for the Loader's sourceComponent when clicked:

      import QtQuick 2.0
      
      Item {
          width: 400; height: 400
      
          Loader {
              id: loader
              sourceComponent: Item {
                  width: parent.width; height: 50
                  Text {
                      anchors.verticalCenter: parent.verticalCenter
                      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis purus eros, pulvinar id metus a, aliquam porttitor nisi. Quisque ut mi ac dui scelerisque hendrerit nec eget turpis. Morbi purus metus, pulvinar pellentesque volutpat eu, lobortis sit amet massa. Duis tempor metus nisl, sit amet rhoncus leo lacinia at. Nullam at augue quis orci consectetur auctor ut et turpis. Aenean convallis arcu faucibus, rhoncus nisi eget, adipiscing lectus. Vestibulum dignissim est at leo eleifend lacinia a eget nisl. Proin luctus dui ornare ornare aliquam. Mauris a dolor pulvinar, tincidunt diam eu, hendrerit nisl. In hac habitasse platea dictumst. Morbi eget odio quis nibh suscipit accumsan at id dolor. Praesent auctor mauris urna, in pulvinar neque vestibulum lacinia. Donec ac massa quam. Vestibulum sit amet libero bibendum, auctor velit nec, euismod dolor. Morbi tincidunt tempor mi, id vestibulum dolor. Nulla id dolor pharetra, ornare eros varius, varius augue. Nullam ornare odio id leo elementum, laoreet gravida mi gravida. Nulla sodales sem sed magna laoreet, at laoreet massa viverra. Ut eget pulvinar nisi. Nam laoreet elementum sodales. Mauris ac neque auctor, sagittis sem quis, fermentum leo."
                  }
              }
              active: false
          }
      
          MouseArea {
              anchors.fill: parent
              onClicked: loader.active = true
          }
      }
      

      My guess would be that hooks are missing in the QML VME, in particular related to incubation.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            mbrasser Michael Brasser
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes